--- a/Source/English.lproj/Credits.html
+++ b/Source/English.lproj/Credits.html
@@ -1,2 +1,3 @@
 <font face="Lucida Grande" size="-1"><b>Icon by</b> <a href="mailto:excellence@global.co.za">Diederik Vemer</a>.</font><br>
-<font face="Lucida Grande" size="-1"><b>Thanks to</b> <a href="mailto:ryanwilcox@mac.com">Ryan Wilcox</a> and <a href="mailto:bhines@alumni.ucsd.edu">Ben Hines</a>.</font>
+<font face="Lucida Grande" size="-1"><b>Thanks to</b> <a href="mailto:ryanwilcox@mac.com">Ryan Wilcox</a>, <a href="mailto:bhines@alumni.ucsd.edu">Ben Hines</a><br>
+and <a href="mailto:qdc@eckysoft.com">Quentin D. Carnicelli</a>.</font>
