English.lproj/MainMenu.nib: Temporarily remove/move out of view controls that don't do anything.  Remove "Edit Alerts" from Edit menu since there's no point in a collapsible alert area yet.
Info-Pester.plist: Updated for build 21.

PSAlarmSetController.m: Always expand alert area since there isn't any
space saving for now.

Pester.xcodeproj: Updated for build 21.

Read Me.rtfd: Clarify dock bouncing behavior and explain why controls
are missing.

Updates/release-notes.html: Updated for build 21.

Updates/updates.html: Updated for build 21.



git-svn-id: http://dev.sabi.net/svn/dev/trunk/Cocoa/Pester@363 24bc951d-4bb6-0310-a7b7-f2527510289e

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -8,10 +8,10 @@
 
 <body>
 <table>
-	<tr><th colspan="2">Pester 1.1 beta 5</th></tr>
+	<tr><th colspan="2">Pester 1.1 beta 5 (21)</th></tr>
 	<tr><td class="icon"></td>
 		<td>
-			Interim Leopard compatibility update.
+			Removed user interface elements that don’t do anything yet.  They’ll be back.
 		</td>
 	</tr>
 </table>
