English.lproj/Alarms.nib: Specify alternating row coloring in the nib, now we're 10.4+.
English.lproj/InfoPlist.strings: Updated for 1.1b6.

English.lproj/Localizable.strings: Quote alarm message in pretty
description (used in tooltip).  Change voice error now it no longer
incorporates OSStatus.

English.lproj/MainMenu.nib: Add speech prefs again; turn repetitions
field into a NJRValidatingField and hook up its delegate.

Info-Pester.plist: Updated for 1.1b6.

NJRHotKey.m: Switch to new Objective-C exception style.

NJRIntervalField.[hm]: Now a subclass of NJRValidatingField.

NJRTableDelegate.m: Get rid of our own tooltip support as NSTableView
now supports them (though with a minor visual glitch on the first
tooltip).

NJRTableView.[hm]: Remove tooltip support.  Remove alternating row
coloring support.

NJRValidatingField.[hm]: Contains validation sheet stuff from
NJRIntervalField.

NJRVoicePopUpButton.[hm]: Switch to NSSpeechSynthesizer.

PSAlarm.m: Quote alarm message in pretty description (used in
tooltip).  Fix repeating alarms not restoring as repeating if they
didn't expire while Pester was not running.  No longer set timer on
Pester 1.0 alarm import, to help make importing atomic.

PSAlarmSetController.[hm]: Use NJRValidatingField for repetitions
field.  Switch to new Objective-C exception style.  Fix validation
issues on in/at changing.  Temporary changes to restore speech support
and allow the sound popup to be removed entirely from the nib (rather
than being dragged out of the visible area, as it was in 1.1b5).
Changes for NSSpeechSynthesizer, which uses different voice names.

PSAlarms.m: Switch to new Objective-C exception style.  Fix
duplication and error handling in Pester 1.0 alarm import, making
atomic.

PSAlarmsController.m: Use new tooltip support (since it's implemented
in the delegate rather than the data source, we have to proxy it).

PSAlerts.m: Wrap initialization in exception block so we don't leak.

PSApplication.m: Switch to new Objective

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -8,10 +8,17 @@
 
 <body>
 <table>
-	<tr><th colspan="2">Pester 1.1 beta 5 (21)</th></tr>
+	<tr><th colspan="2">Pester 1.1 beta 6 (22)</th></tr>
 	<tr><td class="icon"></td>
 		<td>
-			Removed user interface elements that don’t do anything yet.  They’ll be back.
+			<ul>
+			    <li>Repeating alarms continue to repeat if they didn’t expire while Pester was not running.</li>
+			    <li>(Re-)added speech alerts.</li>
+			    <li>Alert help tags in the alarm list appear correctly in Leopard.</li>
+			    <li>Changes to the field you’re editing are saved when switching between “in” and “at”.</li>
+			    <li>Corrected validation of the alert repetition field which allowed you to specify zero (blank) or over 99 repetitions.</li>
+			    <li>Pester 1.0 alarms no longer create duplicates of themselves on import.</li>
+			</ul>
 		</td>
 	</tr>
 </table>
