--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -8,7 +8,7 @@
 
 <body>
 <table>
-	<tr><th colspan="2">Pester 1.1 beta 6 (22)</th></tr>
+	<tr><th colspan="2">Pester 1.1 beta 6 (23)</th></tr>
 	<tr><td class="icon"></td>
 		<td>
 			<ul>
@@ -18,6 +18,7 @@
 			    <li>Changes to the field you’re editing are saved when switching between “in” and “at”.</li>
 			    <li>Corrected validation of the alert repetition field which allowed you to specify zero (blank) or over 99 repetitions.</li>
 			    <li>Pester 1.0 alarms no longer create duplicates of themselves on import.</li>
+			    <li>Fixed “Snooze until” times being an hour late in some time zones.</li>
 			</ul>
 		</td>
 	</tr>
