--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -29,21 +29,27 @@
 </table>
 <p />
 <table>
-	<tr><th>Pester 1.1 beta 9 (32)</th></tr>
+	<tr><th>Pester 1.1 beta 9 (33)</th></tr>
 	<tr><td><ul>
-	    <li>If you have no snooze time set, then choose “until,” then cancel, the previously selected item is reselected.</li>
+	    <li>If you have no snooze time set, then choose “until,” then cancel, restore the previously selected snooze duration.</li>
 	    <li>Handle audio devices being connected/disconnected while Pester is running.</li>
+            <li>Allow keyboard navigation of the Read Me.</li>
+            <li>Expand selectable sound output device (in Preferences) to speech as well as alert sounds (Mac OS X 10.5 and later).</li>
+            <li>Make date popup fully functional for German and Dutch.</li>
+            <li>Fixed some keyboard focus issues with alerts in the Set Alarm window.</li>
+            <li>Make Dock bouncing significantly more reliable.</li>
+            <li>Wait until you stop typing or moving the mouse to bring Pester to the front (optional, in Preferences).</li>
 	</ul></td></tr>
 </table>
 <p />
 <table>
 	<tr><th>Pester 1.1 beta 8 (31)</th></tr>
 	<tr><td><ul>
-	    <li>Added customizable alert sounds—the most requested feature. It uses QuickTime, so you're welcome to pick a movie or even a bitmap or PDF to use as well.</li>
+	    <li>Added customizable alert sounds—the most requested feature. The feature uses QuickTime, so you're welcome to pick a movie or even a bitmap or PDF to use instead.</li>
 	    <li>Added selectable sound output device (in Preferences) and adjustable volume for alert sounds. (Note: Pester doesn't yet respond to audio devices being connected/disconnected while it is running, although you should always get audio output <em>somewhere</em>.)</li>
 	    <li>Baseline, ICU-based support for non-natural language dates and times is much more robust (for example, simply “20” or “8p” works to specify 8:00 PM).</li>
 	    <li>Support natural-language dates in non-English languages via <tt>Date::Manip</tt>. I uncovered some bugs here, which the author of <tt>Date::Manip</tt> is working on fixing, but Catalan, Danish, Dutch, French, German, Polish and Russian should work fine. The date popup is limited to the days of the week, for now.</li>
-	    <li>Optionally wait until you stop typing or moving the mouse to display a message. This is quite helpful so you don't start typing into the Snooze box when you want to be typing into another document.  The feature is disabled by default; enable it in Preferences.</li>
+	    <li>Optionally wait until you stop typing or moving the mouse to display a message. This is quite helpful so you don't start typing into the Snooze box when you want to be typing into another document. The feature is disabled by default; enable it in Preferences.</li>
 	    <li>Handle time zone changes, many more time zones, and more reliably determine the time zone.</li>
 	    <li>Autocomplete common natural-language dates.</li>
 	    <li>Simplify tab ordering.</li>
