--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -27,8 +27,11 @@
 <table>
 	<tr><th>Pester 1.1 beta 10 (36)</th></tr>
 	<tr><td><ul>
+	    <li>Fix regression whereby Pester would not come to the front automatically in Mac OS X 10.5.</li>
 	    <li>Fix problems where various Pester keyboard equivalents could not be assigned; improve reliability of keyboard equivalent display.</li>
+	    <li>Fix crash on speech voice preview.</li>
 	    <li>Handle audio devices being connected/disconnected while Pester is running.</li>
+	    <li>Really fix some long-standing inconsistencies between icon and Dock menu time display.</li>
 	</ul></td></tr>
 </table>
 <p />
@@ -40,7 +43,7 @@
             <li>Allow keyboard navigation of the Read Me.</li>
             <li>Expand selectable sound output device (in Preferences) to speech as well as alert sounds (Mac OS X 10.5 and later).</li>
             <li>Make date popup fully functional for German and Dutch.</li>
-            <li>Fixed some keyboard focus issues with alerts in the Set Alarm window.</li>
+            <li>Fix some keyboard focus issues with alerts in the Set Alarm window.</li>
             <li>Make Dock bouncing significantly more reliable.</li>
             <li>Wait until you stop typing or moving the mouse to bring Pester to the front (optional, in Preferences).</li>
             <li>Readd “– All” (remove all recent messages) via Option-click.</li>
@@ -68,7 +71,7 @@
 	    <li>If the Set Alarm window was visible when Pester was last active, prevent it from switching Spaces and obscuring a notification alert.</li>
 	    <li>(Re-)added optional dock icon bouncing, which works more reliably.</li>
 	    <li>Restored “today” item to date completion menus.</li>
-	    <li>Fixed horizontal resizing glitches in the Alarms window.</li>
+	    <li>Fix horizontal resizing glitches in the Alarms window.</li>
 	    <li>Save the most recent alarm message across runs of Pester.</li>
 	    <li>Disable the “–” button when it would do nothing.</li>
             <li>Added “days” and “weeks” alarm interval units.</li>
@@ -80,9 +83,9 @@
 <table>
 	<tr><th>Pester 1.1 beta 7 (24)</th></tr>
 	<tr><td><ul>
-	    <li>Fixed “Snooze until” times being an hour late in some time zones.</li>
-	    <li>Fixed speech voices displaying as dotted identifiers instead of names.</li>
-	    <li>Fixed crash on launch on PowerPC Macs running Leopard.</li>
+	    <li>Fix “Snooze until” times being an hour late in some time zones.</li>
+	    <li>Fix speech voices displaying as dotted identifiers instead of names.</li>
+	    <li>Fix crash on launch on PowerPC Macs running Leopard.</li>
 	</ul></td></tr>
 </table>
 <p />
