--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -25,6 +25,17 @@
 </table>
 <p />
 <table>
+	<tr><th>Pester 1.1 beta 11 (38)</th></tr>
+	<tr><td><ul>
+	    <li>Fix Preferences not displaying on Mac OS X 10.4.</li>
+	    <li>Fix intermittent failure to play the correct speech voice.</li>
+	    <li>Fix memory leak on speech completion on Mac OS X 10.5.</li>
+	    <li>Added <a href="http://growl.info/">Growl</a> alerts. Configure or disable them from the Growl System Preferences pane.  Growl is optional; install it separately if you want.</li>
+	    <li>Added date completions for Italian and Swedish.</li>
+	</ul></td></tr>
+</table>
+<p />
+<table>
 	<tr><th>Pester 1.1 beta 10 (36)</th></tr>
 	<tr><td><ul>
 	    <li>Fix regression whereby Pester would not come to the front automatically in Mac OS X 10.5.</li>
