--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -27,11 +27,12 @@
 <table>
 	<tr><th>Pester 1.1 beta 11 (39)</th></tr>
 	<tr><td><ul>
+	    <li>Added <a href="http://growl.info/">Growl</a> alerts. Configure Growl alert appearance and behavior from the Growl System Preferences pane.  Growl is optional; install it separately if you wish to use it.</li>
+	    <li>If Growl is installed, display an alarm’s time remaining when it is set as a confirmation.  You can disable this from the Growl System Preferences pane as well.</li>
 	    <li>Fix Preferences not displaying on Mac OS X 10.4.</li>
 	    <li>Fix intermittent failure to play the correct speech voice.</li>
 	    <li>Fix memory leak on speech completion on Mac OS X 10.5.</li>
-	    <li>Added <a href="http://growl.info/">Growl</a> alerts. Configure or disable them from the Growl System Preferences pane.  Growl is optional; install it separately if you want.</li>
-	    <li>Added date completions for Italian and Swedish.</li>
+	    <li>Make date popup fully functional for French and more functional for Italian and Swedish.</li>
 	</ul></td></tr>
 </table>
 <p />
