--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -25,6 +25,15 @@
 </table>
 <p />
 <table>
+	<tr><th>Pester 1.1 beta 12 (41)</th></tr>
+	<tr><td><ul>
+        <li>Display alarm remaining time in a friendlier fashion.</li>
+        <li>Fix problem where Pester keyboard equivalents involving the “A” key would not be assigned.</li>
+        <li>Wake up the display when a message is displayed.  By putting the display to sleep with ⌃⇧⏏ after setting an alarm, you can thus use Pester as an effective visual alarm.  (Just make sure your Mac doesn’t go to sleep or enter a locking screen saver before the alarm expires.)</li>
+	</ul></td></tr>
+</table>
+<p />
+<table>
 	<tr><th>Pester 1.1 beta 11 (39)</th></tr>
 	<tr><td><ul>
 	    <li>Added <a href="http://growl.info/">Growl</a> alerts. Configure Growl alert appearance and behavior from the Growl System Preferences pane.  Growl is optional; install it separately if you wish to use it.</li>
