--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -25,6 +25,17 @@
 </table>
 <p />
 <table>
+	<tr><th>Pester 1.1 beta 13 (46)</th></tr>
+	<tr><td><ul>
+        <li><b>Note:</b> This version requires Mac OS X 10.6 or later,
+        including OS X Lion (10.7); 1.1b12 is the last version of
+        Pester to support Mac OS X 10.4 and 10.5.</li>
+        <li>Link to Perl 5.10 rather than 5.8, to support OS X Lion.
+        Earlier Pester 1.1 betas are not compatible with OS X Lion.</li>
+	</ul></td></tr>
+</table>
+<p />
+<table>
 	<tr><th>Pester 1.1 beta 12 (42)</th></tr>
 	<tr><td><ul>
         <li>Display alarm remaining time in a friendlier fashion.  (Build 42: don’t display “0 seconds”, etc.).</li>
