--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -25,6 +25,24 @@
 </table>
 <p />
 <table>
+	<tr><th>Pester 1.1 beta 14 (47)</th></tr>
+	<tr><td><ul>
+        <li>Avoid a crash that can be triggered by dragging the volume
+        slider quickly on OS X Lion.  To ensure accurate volume
+        preview, drag the slider more slowly (or use the keyboard if
+        full keyboard access is enabled).</li>
+	<li>Fix a problem with relative date/time display where the
+	cutoff for a larger unit was 999 hours/days; now displays
+	smaller units up to twice the larger unit.  Multiple units are
+	still only used up to &ldquo;days and hours&rdquo;, not
+	&ldquo;weeks and days&rdquo;.</li>
+        <li>Fix a few minor visual glitches on OS X Lion.</li>
+	<li>Update Growl framework to 1.2.2 for compatibility with
+	Growl 1.3 (OS X Lion only).</li>
+	</ul></td></tr>
+</table>
+<p />
+<table>
 	<tr><th>Pester 1.1 beta 13 (46)</th></tr>
 	<tr><td><ul>
         <li><b>Note:</b> This version requires Mac OS X 10.6 or later,
