--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -25,6 +25,34 @@
 </table>
 <p />
 <table>
+    <tr><th>Pester 1.1 beta 15 (48)</th></tr>
+    <tr><td><ul>
+	<li>Fix rare instances where the Dock displays an inaccurate
+	time remaining.</li>
+	<li>Fix Read Me losing its section navigation.  (If you're
+	viewing the Read Me on a Retina display, you may find it gains
+	unwanted horizontal scrolling.  To work around this issue,
+	close and reopen the Read Me window.)</li>
+	<li>Fix natural-language date processing on OS X Mountain
+	Lion.</li>
+	<li>Permit entry of single-digit hour/minute times without
+	punctuation or an initial zero.  For example, you can now type
+	“930” for 9:30, where previously “0930” or “9:30” was
+	required.</li>
+	<li>Don’t require the discrete GPU on MacBook Pro models from
+	early 2011 and later, on OS X Lion or later. If you’re using
+	an earlier OS X version or an older multi-GPU MacBook Pro,
+	Apple provides no way for Pester to “opt out” of the discrete
+	GPU.  You may find <a
+	href="http://codykrieger.com/gfxCardStatus">gfxCardStatus</a>
+	helpful as a workaround.</li>
+	<li>Update Growl framework to 1.2.3.</li>
+	<li>Sign with Developer ID for Gatekeeper on OS X Mountain
+	Lion (10.8).</li>
+    </ul></td></tr>
+</table>
+<p />
+<table>
 	<tr><th>Pester 1.1 beta 14 (47)</th></tr>
 	<tr><td><ul>
         <li>Avoid a crash that can be triggered by dragging the volume
