Make dock countdown display optional.
From https://github.com/nriley/Pester/pull/11.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -34,6 +34,9 @@
 <table>
     <tr><th>Pester 1.1 beta 15 (48)</th></tr>
     <tr><td><ul>
+        <li>Optionally stop the time remaining until the next alarm
+        from displaying in Pester’s Dock icon, in Preferences. (Thanks
+        to Nur Monson for the contribution.)</li>
 	<li>Fix rare instances where the Dock displays an inaccurate
 	time remaining.</li>
 	<li>Fix Read Me losing its section navigation.  (If you're
