A few more 1.1b16 release notes.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -55,10 +55,13 @@
         useful and should not have been there.</li>
         <li>Add Retina calendar and volume icons.</li>
         <li>Improve display of certain sound device names (such as
-        those of AirPlay devices) to be consistent with the Sound menu
-        extra.</li>
+        those of AirPlay devices) so that they are consistent with the
+        Sound menu extra.</li>
         <li>Update the natural language date
-        parser, <tt>Date::Manip</tt>.</li>
+        parser, <tt>Date::Manip</tt> (fixes for Spanish, Finnish,
+        French, Portuguese, Swedish and Turkish).</li>
+        <li>Fix tabbing with Full Keyboard Access enabled.</li>
+        <li>Improve playback of default alert sound.</li>
         <li>Improve display of long alarm messages in the alarm list
         window.</li>
         <li>Optional log expired alarms to the Console.  (Note that
