Mark repeating alarms with an icon (actually a character in FontAwesome) in the alarm list's Message column.
This is more complicated than otherwise expected because we need to use an attributed string.

Also:

- Switch to localized string comparison (10.6+) for typeahead.

- Remove +[NSString ellipsisString], no longer necessary with Unicode escapes.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -51,6 +51,8 @@
         <li>Permit entry of 12-hour single-digit hour/minute times
         without punctuation.  For example, you can now type
         “930a”.</li>
+        <li>Mark repeating alarms in the Alarms window with a curved
+        arrow icon.</li>
         <li>Remove an item from the Edit menu that didn’t do anything
         useful and should not have been there.</li>
         <li>Add Retina calendar and volume icons.</li>
