Grammar is useful.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -75,7 +75,7 @@
         <li>Improve playback of default alert sound.</li>
         <li>Improve display of long alarm messages in the alarm list
         window.</li>
-        <li>Optional log expired alarms to the Console.  (Note that
+        <li>Optionally log expired alarms to the Console.  (Note that
         you can also view expired alarms in Growl or Notification
         Center, if you have the corresponding alert enabled.)  This is
         not exposed in Pester’s user interface, but you can quit
