Fix speech previews not matching a changed sound output device.
We only changed the device when recreating a NJRSpeechSynthesizer, which didn't happen for the NJRVoicePopUpButton.

Now NJRSpeechSynthesizer handles device changes internally.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -84,6 +84,8 @@
         reopen Pester to enable logging; replace <tt>YES</tt>
         with <tt>NO</tt> to disable logging.  (Thanks to Mikey Reppy
         for the suggestion.)</li>
+        <li>Fix speech previews playing through the wrong device when
+        you change <b>Play sound through</b> in Preferences.</li>
         <li>Offer to automatically move Pester to your Applications
         folder.</li>
     </ul></td></tr>
