Update release notes for public pre-beta release.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -74,7 +74,7 @@
         <li>Fix tabbing with Full Keyboard Access enabled.</li>
         <li>Improve playback of default alert sound.</li>
         <li>Improve display of long alarm messages in the alarm list
-        window.</li>
+        window and notification alerts.</li>
         <li>Optionally log expired alarms to the Console.  (Note that
         you can also view expired alarms in Growl or Notification
         Center, if you have the corresponding alert enabled.)  This is
@@ -86,6 +86,8 @@
         for the suggestion.)</li>
         <li>Fix speech previews playing through the wrong device when
         you change <b>Play sound through</b> in Preferences.</li>
+        <li>Greatly improve error handling when restoring alarms and
+        alerts.</li>
         <li>Offer to automatically move Pester to your Applications
         folder.</li>
     </ul></td></tr>
