--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -19,20 +19,20 @@
 	<tr><th>Important: do not click “Install Update”</th></tr>
 	<tr><td>
           <p>A recent Apple security update causes updates through
-          this window to fail.</p>
+            this window to fail.</p>
           <p>To update, please download Pester 1.1b16 <a
           href="http://sabi.net/nriley/software/Pester-1.1b16.dmg">here</a>
-          and replace this copy of Pester with the updated version.</p>
-		  <p><b>You must update Pester if you are using OS X Mountain
-		  Lion (10.8): versions 1.1b14 and earlier will not work
-		  properly.</b></p>
-		  <p>Pester 1.1b15 and later are again able to update
-		  through this window.</p>
+            and replace this copy of Pester with the updated version.</p>
+	  <p><b>You must update Pester if you are using OS X Mountain
+	      Lion (10.8): versions 1.1b14 and earlier will not work
+	      properly.</b></p>
+	  <p>Pester 1.1b15 and later are again able to update
+	    through this window.</p>
         </td></tr>
 </table>
 <p />
 <table>
-    <tr><th>Pester 1.1 beta 16 ()</th></tr>
+    <tr><th>Pester 1.1 beta 16 (51)</th></tr>
     <tr><td><ul>
         <li>Added Notification Center alerts on OS X Mountain Lion
         (10.8) and later.  Use Notifications System Preferences to
