--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -32,6 +32,22 @@
 </table>
 <p />
 <table>
+    <tr><th>Pester 1.1 beta 17 (52)</th></tr>
+    <tr><td><ul>
+        <li>Support natural-language date and time entry on OS X
+        Mavericks (10.9), by linking to Perl 5.12 on OS X
+        10.7&ndash;10.9.  Perl 5.10 remains in use on Mac OS X
+        10.6.</li>
+        <li>Make alert sound preview work like alert sound
+        playback.</li>
+        <li>Work around a bug in OS X 10.7, 10.8 and 10.9 which caused
+        text in the About window to be off-center.</li>
+        <li>Code cleanups and modernization without (intended) changes
+        in functionality; remove some code which was never used.</li>
+    </ul></td></tr>
+</table>
+<p />
+<table>
     <tr><th>Pester 1.1 beta 16 (51)</th></tr>
     <tr><td><ul>
         <li>Added Notification Center alerts on OS X Mountain Lion
