--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -20,15 +20,36 @@
 	<tr><td>
           <p>A recent Apple security update causes updates through
             this window to fail.</p>
-          <p>To update, please download Pester 1.1b16 <a
-          href="http://sabi.net/nriley/software/Pester-1.1b16.dmg">here</a>
+          <p>To update, please download Pester 1.1b18 <a
+          href="http://sabi.net/nriley/software/Pester-1.1b18.dmg">here</a>
             and replace this copy of Pester with the updated version.</p>
 	  <p><b>You must update Pester if you are using OS X Mountain
-	      Lion (10.8): versions 1.1b14 and earlier will not work
-	      properly.</b></p>
+	      Lion (10.8) or Mavericks (10.9): versions 1.1b14 and
+	      earlier will not work properly.</b></p>
 	  <p>Pester 1.1b15 and later are again able to update
 	    through this window.</p>
         </td></tr>
+</table>
+<p />
+<table>
+    <tr><th>Pester 1.1 beta 18 (55)</th></tr>
+    <tr><td><ul>
+        <li>Work around a bug in OS X 10.8 and 10.9 which prevented
+        speech voice changes from taking effect.</li>
+        <li>Fix an issue introduced in 1.1b17 which prevented changes
+        to the sound output device in Preferences from taking effect,
+        or the Preferences window from being displayed after changing
+        the sound output device.</li>
+        <li>Improve clarity and consistency of time remaining display
+        in Pester’s Dock icon.</li>
+        <li>Fix an issue in which the time remaining would not display
+        in Pester’s Dock icon on OS X 10.8 and later until you toggled
+        the option in Preferences.</li>
+        <li>Permit entry of midnight as “0” (previously you needed to
+        use “00” or “24”.)</li>
+        <li>Update Read Me for changes in Pester 1.1.</li>
+        <li>Improve display of Read Me.</li>
+    </ul></td></tr>
 </table>
 <p />
 <table>
