--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -32,7 +32,7 @@
 </table>
 <p />
 <table>
-    <tr><th>Pester 1.1 beta 18 (55)</th></tr>
+    <tr><th>Pester 1.1 beta 18 (56)</th></tr>
     <tr><td><ul>
         <li>Work around a bug in OS X 10.8 and 10.9 which prevented
         speech voice changes from taking effect.</li>
@@ -41,7 +41,8 @@
         or the Preferences window from being displayed after changing
         the sound output device.</li>
         <li>Improve clarity and consistency of time remaining display
-        in Pester’s Dock icon.</li>
+        in Pester’s Dock icon.  (Build 56: Fix a memory leak
+        introduced by this change.)</li>
         <li>Fix an issue in which the time remaining would not display
         in Pester’s Dock icon on OS X 10.8 and later until you toggled
         the option in Preferences.</li>
