--- a/Source/en.lproj/Credits.html
+++ b/Source/en.lproj/Credits.html
@@ -1,1 +1,1 @@
-<font face="Lucida Grande" size="-1"><b>Icon by</b> <a href="https://twitter.com/Vemer">Diederik Vemer</a>.</font>
+<font face="Helvetica Neue" size="-1"><b>Icon by</b> <a href="https://twitter.com/Vemer">Diederik Vemer</a>.</font>
